# carolus

./: .dockerignore  Cargo.toml  LICENSE  readme.md
cli/: Cargo.toml  readme.md
cli/src/: cli.rs  main.rs  the_movie_db.rs
data/: Cargo.toml
data/src/: error.rs  lib.rs
index/: Cargo.toml
index/src/: lib.rs  parse_movie.rs  parse_tv.rs
web/: Cargo.toml
web/src/: cli.rs  data.rs  error.rs  main.rs  media_api.rs
web/src/controllers/: mod.rs  view.rs
web/src/file_index/: index.rs  parse_movie.rs
web/styles/: index.scss
web/styles/pages/: _all-movies.scss  _all-tv-shows.scss  _home.scss  _movie.scss  _tv-series.scss  _tv-show.scss
web/templates/: about.hbs  all-movies.hbs  all-tv-shows.hbs  base.hbs  error.hbs  home.hbs  movie.hbs  tv-episode.hbs  tv-series.hbs  tv-show.hbs
