[package]
name = "index"
version = "0.1.0"
authors = ["Simon Dickson <simon@simonhdickson.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
futures = "0.1"
globwalk = "0.5"
lazy_static = "1.2"
log = "0.4"
regex = "1.1"
serde = { version="1.0", features=["rc"] }
serde_derive = "1.0"
serde_json = "1.0"

data = { path = "../data" }
