[package]
name = "carolus"
version = "0.1.0"
authors = ["Simon Dickson <simon@simonhdickson.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "0.7"
clap = "2.32"
failure = "0.1"
futures = "0.1"
glob = "0.2"
handlebars = "1.1.0"
lazy_static = "1.2"
log = "0.4"
num_cpus = "1.9.0"
regex = "1.1"
serde = { version="1.0", features=["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "1.0"
